# ai-ml

./: .gitignore  README.md
Algorithms/knn/: knn.cpp  knn.md
Distributions/bernoulli/: bernoulli.cpp
Distributions/gaussian/: gaussian  gaussian.cpp  gaussian.md
Models/convolutional_neural_network/: main.py  train.py  visualize.py
Models/convolutional_neural_network/models/: cnn_model.py
Models/feedforward_neural_network/: CMakeLists.txt  ffnn.cpp  ffnn.md
Models/feedforward_neural_network/include/: layer.h  neuralnetwork.h  parser.h
Models/feedforward_neural_network/src/: layer.cpp  main.cpp  neuralnetwork.cpp  parser.cpp
Models/linear_regression/: regression.cpp  regression.md
Models/logistic_regression/: logistic_regression.cpp
Models/long_short_term_memory/: main.py
Models/long_short_term_memory/data/collection/: collect_data.py
Models/long_short_term_memory/models/: lstm_model_v1.py
Models/long_short_term_memory/training/: training.py
Models/long_short_term_memory/utils/: config.py
Models/long_short_term_memory/visualize/: visualize_performance.py
Models/naive_bayes/: naive_bayes.cpp  naive_bayes.md
Models/recurrent_neural_network/: main.py
Models/recurrent_neural_network/data_collection/: historical_data_collector.py  recent_data_collector.py
Models/recurrent_neural_network/models/: rnn_model.py
Models/recurrent_neural_network/preprocessing/: data_processor.py  sequence_creator.py
Models/recurrent_neural_network/training/: train.py
Models/recurrent_neural_network/utils/: config.py
Notes/: Chapter_1.md  Chapter_2.md
(+1 files in other folders)
